--- a/home.html
+++ b/home.html
@@ -126,8 +126,8 @@
                            <input type="text" placeholder="Type your name..." id="name" name="name"><br><br>
                            <label for="email"><strong>Email Address:</strong></label>
                            <input type="email" id="email" name="email"><br><br>
-                           <label for="textarea"><strong>Where did you hear about us:</strong></label>
-                            <textarea name="textarea" id="textarea" cols="15" rows="1"></textarea><br><br>
+                           <label for="textarea"><strong>Message:</strong></label>
+                            <textarea name="textarea" id="textarea" cols="50" rows="1"></textarea><br><br>
                             <input type="submit" value="Send">
 
                    
